--- a/access-widget-server/.env
+++ b/access-widget-server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/access-widget
+MONGO_URI=mongodb+srv://dbUser:<db_passworsandra@123>@cluster0.tpomxyh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
